2011-01-28  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Spelling corrections.
	* README.MacOS: Additional modifications for building Octave manually.
	* README.MacOS: Modify instructions for building Octave manually.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for ARPACK.
	* common.mk (ARPACK_CPPFLAGS, ARPACK_LDFLAGS, ARPACK_LIBS):
	Delete variables.
	(do_subst_config_vals): Don't substitute them.

2011-01-27  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Modify instructions for MacPorts to "deactivate"
	rather than "uninstall" octave.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* mk-opts.pl, mkoctfile.cc.in, mkoctfile.in: Untabify.

	* mkf77def.in, mk-opts.pl, mkoctfile.cc.in, structdemo.cc,
	unwinddemo.cc, fortdemo.cc, paramdemo.cc,
	celldemo.cc,stringdemo.cc, hello.cc, embedded.cc, helloworld.cc:
	Strip trailing whitespace.

2011-01-26  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Modify organization, and update for MacPorts.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* bootstrap: Update from gnulib sources.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* configure.ac (INSTALL_SCRIPT): Update commend about UGLY_DEFS.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* acinclude.m4 (OPENGL_LIBS): Don't add -L/usr/X11R6/LIB to
	LDFLAGS in test.  Bug #32160.

2010-01-25  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Directly run makefile rules in doc/interpreter directory
	for AUTHORS, BUGS, INSTALL.OCTAVE files.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* autogen.sh (AUTOMAKE): Add --foreign to the automake command.
	Check for required GNU files here instead of having automake do it.
	Export AUTOMAKE so our options are actually used.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* Makefile.am (EXTRA_DIST): Remove ROADMAP from the list.

2010-01-24  Rik  <octave@nomad.inbox5.com>

	* AUTHORS: Remove.  File now auto-generated from contributors.texi.
	* Makefile.am: Add rule for AUTHORS file.
