@@ -32,7 +32,6 @@ image_FCN_FILES = \
   image/rgb2hsv.m \
   image/rgb2ind.m \
   image/rgb2ntsc.m \
-  image/saveimage.m \
   image/spring.m \
   image/summer.m \
   image/white.m \
