@@ -1,3 +1,7 @@
+2010-01-29  Rik  <octave@nomad.inbox5.com>
+
+	* deprecated/module.mk, image/module.mk: Deprecate saveimage.m.
+
 2011-01-29  Rik  <octave@nomad.inbox5.com>
 
 	* optimization/glpkmex.m: Add seealso reference to glpk.
