@@ -1,3 +1,7 @@
+2010-01-29  Rik  <octave@nomad.inbox5.com>
+
+	* NEWS: Deprecate saveimage function.
+
 2011-01-28  Ben Abbott  <bpabbott@mac.com>
 
 	* README.MacOS: Spelling corrections.
